20260111_newest simulation model & data & result & readme

--- a/outputs/simulation_configs/simulation_config.json
+++ b/outputs/simulation_configs/simulation_config.json
@@ -9,12 +9,7 @@
         "rp_rate": 20.609848484848484,
         "fg_rate": 42.174012158054715
     },
-    "buffer_capacity": {
-        "rp_trailers": 4,
-        "fg_trailers": 9,
-        "pallets_per_trailer": 33
-    },
-    "truck_arrival_rates": {
+    "truck_arrival_rates_outbound": {
         "FG": {
             "6": 2.106837606837607,
             "7": 3.6495726495726495,
@@ -55,6 +50,49 @@
             "21": 0.8149466192170819,
             "22": 0.5622775800711743,
             "23": 0.3914590747330961
+        }
+    },
+    "truck_arrival_rates_inbound": {
+        "FG": {
+            "6": 1.5896656534954408,
+            "7": 2.2735562310030395,
+            "8": 2.5531914893617023,
+            "9": 2.68693009118541,
+            "10": 2.3951367781155017,
+            "11": 2.2857142857142856,
+            "12": 2.4346504559270516,
+            "13": 2.0638297872340425,
+            "14": 2.164133738601824,
+            "15": 1.9331306990881458,
+            "16": 2.155015197568389,
+            "17": 1.6869300911854104,
+            "18": 1.884498480243161,
+            "19": 1.6990881458966565,
+            "20": 1.635258358662614,
+            "21": 1.0425531914893618,
+            "22": 0.4133738601823708,
+            "23": 0.7203647416413373
+        },
+        "R&P": {
+            "5": 0.003246753246753247,
+            "6": 1.7142857142857142,
+            "7": 1.1071428571428572,
+            "8": 1.4610389610389611,
+            "9": 0.9707792207792207,
+            "10": 1.2857142857142858,
+            "11": 1.2662337662337662,
+            "12": 1.2597402597402598,
+            "13": 1.3668831168831168,
+            "14": 1.3636363636363635,
+            "15": 1.1396103896103895,
+            "16": 1.301948051948052,
+            "17": 1.1818181818181819,
+            "18": 1.1136363636363635,
+            "19": 0.8798701298701299,
+            "20": 0.7597402597402597,
+            "21": 0.8993506493506493,
+            "22": 0.2857142857142857,
+            "23": 0.2597402597402597
         }
     },
     "daily_demand": {
@@ -227,18 +265,25 @@
             "count": 11004
         }
     },
-    "fte_total": 123,
-    "fte_allocation": {
-        "rp_baseline": 26,
-        "fg_baseline": 97
+    "fte_config": {
+        "FG": {
+            "Inbound": 44.75,
+            "Outbound": 44.75,
+            "efficiency": 665.43
+        },
+        "R&P": {
+            "Inbound": 10.025,
+            "Outbound": 10.025,
+            "efficiency": 1308.83
+        }
     },
     "data_source": {
         "efficiency_source": "KPI sheet 2025.xlsx (11 months)",
         "demand_source": "Total Shipments 2025.xlsx (full year)",
         "dock_capacity_source": "Timeslot by week W1-W48.xlsx (48 weeks)",
         "pallet_distribution_source": "Total Shipments 2025.xlsx analysis",
-        "fte_source": "KPI sheet 2025.xlsx Hours data",
-        "extraction_date": "2026-01-09",
+        "fte_source": "Hardcoded",
+        "extraction_date": "2026-01-11",
         "year": 2025
     }
 }
