feat: Add dynamic scheduling demonstration and architecture documentation
- Implemented a new script `demo_dynamic_scheduling.py` to showcase dynamic priority queue scheduling for outbound orders.
- Created architecture descriptions in `ARCHITECTURE_DESCRIPTIONS.md` detailing the overall architecture, outbound and inbound processes.
- Added a 2-minute presentation script in `PRESENTATION_SCRIPT_2MIN.md` for effective communication of the simulation model.
- Developed a comprehensive overview of the simulation architecture in `SIMULATION_ARCHITECTURE_BRIEF.md`.
- Introduced unit tests in `test_priority_queue.py` to validate the core logic of the priority queue scheduling.

--- a/outputs/simulation_configs/simulation_config.json
+++ b/outputs/simulation_configs/simulation_config.json
@@ -260,7 +260,7 @@
             "mode": 18,
             "max": 560,
             "mean": 22.65267175572519,
-            "std": 9.697021016711489,
+            "std": 9.69702101671149,
             "median": 22.0,
             "count": 11004
         }
@@ -277,7 +277,7 @@
             "efficiency": 1308.83
         }
     },
-    "generated_orders_path": "D:\\TUD\\Design_Project\\outputs\\simulation_configs\\generated_orders.json",
+    "generated_orders_path": "d:\\TUD\\Design_Project\\outputs\\simulation_configs\\generated_orders.json",
     "kpi_monthly_totals": {
         "FG": {
             "Inbound": {
