Refactor KPICollector and DCSimulation classes; remove deprecated test_priority_queue.py
- Cleaned up KPICollector by removing unnecessary comments and improving code clarity.
- Simplified the record_dock_usage and record_inbound_delay methods.
- Updated DCSimulation initialization to enhance readability and maintainability.
- Removed the test_priority_queue.py file as it was no longer needed.

--- a/outputs/simulation_configs/simulation_config.json
+++ b/outputs/simulation_configs/simulation_config.json
@@ -6,130 +6,130 @@
         "fg_std": 0.38550102324130053
     },
     "factory_production": {
-        "rp_rate": 20.609848484848484,
-        "fg_rate": 42.174012158054715
+        "rp_rate": 20.258891213389123,
+        "fg_rate": 42.299019607843135
     },
     "truck_arrival_rates_outbound": {
         "FG": {
-            "6": 2.106837606837607,
-            "7": 3.6495726495726495,
-            "8": 3.2222222222222223,
-            "9": 3.3974358974358974,
-            "10": 4.111111111111111,
-            "11": 4.17948717948718,
-            "12": 4.119658119658119,
-            "13": 3.927350427350427,
-            "14": 3.7777777777777777,
-            "15": 3.3846153846153846,
-            "16": 3.448717948717949,
-            "17": 2.747863247863248,
-            "18": 2.3675213675213675,
-            "19": 2.072649572649573,
-            "20": 0.9102564102564102,
-            "21": 0.3034188034188034,
-            "22": 0.20085470085470086
+            "6": 2.1183431952662723,
+            "7": 3.8757396449704142,
+            "8": 3.36094674556213,
+            "9": 3.591715976331361,
+            "10": 4.189349112426036,
+            "11": 4.195266272189349,
+            "12": 4.224852071005917,
+            "13": 3.9822485207100593,
+            "14": 3.863905325443787,
+            "15": 3.42603550295858,
+            "16": 3.42603550295858,
+            "17": 2.7455621301775146,
+            "18": 2.2781065088757395,
+            "19": 1.893491124260355,
+            "20": 0.9526627218934911,
+            "21": 0.42011834319526625,
+            "22": 0.21301775147928995
         },
         "R&P": {
-            "4": 0.0035587188612099642,
-            "5": 0.0035587188612099642,
-            "6": 0.8327402135231317,
-            "7": 1.2277580071174377,
-            "8": 1.2277580071174377,
-            "9": 1.2348754448398576,
-            "10": 1.0427046263345197,
-            "11": 1.1743772241992882,
-            "12": 0.8434163701067615,
-            "13": 0.896797153024911,
-            "14": 1.0320284697508897,
-            "15": 1.0711743772241993,
-            "16": 0.9466192170818505,
-            "17": 0.9395017793594306,
-            "18": 1.0249110320284698,
-            "19": 1.5444839857651245,
-            "20": 0.8398576512455516,
-            "21": 0.8149466192170819,
-            "22": 0.5622775800711743,
-            "23": 0.3914590747330961
+            "4": 0.004201680672268907,
+            "5": 0.004201680672268907,
+            "6": 0.9621848739495799,
+            "7": 1.403361344537815,
+            "8": 1.3697478991596639,
+            "9": 1.3781512605042017,
+            "10": 1.1764705882352942,
+            "11": 1.2605042016806722,
+            "12": 0.957983193277311,
+            "13": 1.0294117647058822,
+            "14": 1.180672268907563,
+            "15": 1.226890756302521,
+            "16": 1.0924369747899159,
+            "17": 1.0756302521008403,
+            "18": 1.1722689075630253,
+            "19": 1.7941176470588236,
+            "20": 0.9705882352941176,
+            "21": 0.9327731092436975,
+            "22": 0.6470588235294118,
+            "23": 0.4495798319327731
         }
     },
     "truck_arrival_rates_inbound": {
         "FG": {
-            "6": 1.5896656534954408,
-            "7": 2.2735562310030395,
-            "8": 2.5531914893617023,
-            "9": 2.68693009118541,
-            "10": 2.3951367781155017,
-            "11": 2.2857142857142856,
-            "12": 2.4346504559270516,
-            "13": 2.0638297872340425,
-            "14": 2.164133738601824,
-            "15": 1.9331306990881458,
-            "16": 2.155015197568389,
-            "17": 1.6869300911854104,
-            "18": 1.884498480243161,
-            "19": 1.6990881458966565,
-            "20": 1.635258358662614,
-            "21": 1.0425531914893618,
-            "22": 0.4133738601823708,
-            "23": 0.7203647416413373
+            "6": 1.4579831932773109,
+            "7": 2.407563025210084,
+            "8": 2.73109243697479,
+            "9": 2.9453781512605044,
+            "10": 2.5714285714285716,
+            "11": 2.411764705882353,
+            "12": 2.5798319327731094,
+            "13": 2.130252100840336,
+            "14": 2.226890756302521,
+            "15": 1.9915966386554622,
+            "16": 2.2605042016806722,
+            "17": 1.6260504201680672,
+            "18": 1.819327731092437,
+            "19": 1.5420168067226891,
+            "20": 1.4411764705882353,
+            "21": 0.8361344537815126,
+            "22": 0.3025210084033613,
+            "23": 0.5798319327731093
         },
         "R&P": {
-            "5": 0.003246753246753247,
-            "6": 1.7142857142857142,
-            "7": 1.1071428571428572,
-            "8": 1.4610389610389611,
-            "9": 0.9707792207792207,
-            "10": 1.2857142857142858,
-            "11": 1.2662337662337662,
-            "12": 1.2597402597402598,
-            "13": 1.3668831168831168,
-            "14": 1.3636363636363635,
-            "15": 1.1396103896103895,
-            "16": 1.301948051948052,
-            "17": 1.1818181818181819,
-            "18": 1.1136363636363635,
-            "19": 0.8798701298701299,
-            "20": 0.7597402597402597,
-            "21": 0.8993506493506493,
-            "22": 0.2857142857142857,
-            "23": 0.2597402597402597
+            "5": 0.0041841004184100415,
+            "6": 1.7615062761506277,
+            "7": 1.0167364016736402,
+            "8": 1.3849372384937237,
+            "9": 0.9665271966527197,
+            "10": 1.1966527196652719,
+            "11": 1.205020920502092,
+            "12": 1.4225941422594142,
+            "13": 1.3305439330543933,
+            "14": 1.4309623430962344,
+            "15": 1.284518828451883,
+            "16": 1.2635983263598327,
+            "17": 1.1338912133891212,
+            "18": 1.1799163179916319,
+            "19": 0.8410041841004184,
+            "20": 0.8451882845188284,
+            "21": 0.9414225941422594,
+            "22": 0.32217573221757323,
+            "23": 0.24686192468619247
         }
     },
     "daily_demand": {
         "FG": {
             "inbound": {
-                "mean": 1012.1762917933131,
-                "std": 571.937336067009,
-                "median": 1244.0,
+                "mean": 1015.1764705882352,
+                "std": 580.9565681938495,
+                "median": 1256.5,
                 "min": 26,
-                "max": 1947,
-                "total_days": 329
+                "max": 1785,
+                "total_days": 238
             },
             "outbound": {
-                "mean": 1433.0641025641025,
-                "std": 177.85435569277104,
-                "median": 1434.0,
+                "mean": 1439.4674556213017,
+                "std": 191.93429665429284,
+                "median": 1438.0,
                 "min": 99.0,
                 "max": 1907.0,
-                "total_days": 234
+                "total_days": 169
             }
         },
         "R&P": {
             "inbound": {
-                "mean": 494.6363636363636,
-                "std": 256.75580150207867,
-                "median": 551.0,
+                "mean": 486.21338912133893,
+                "std": 267.7570085325453,
+                "median": 554.0,
                 "min": 66,
-                "max": 1120,
-                "total_days": 308
+                "max": 1006,
+                "total_days": 239
             },
             "outbound": {
-                "mean": 344.9181494661922,
-                "std": 172.5177332234669,
-                "median": 363.0,
+                "mean": 392.6344537815126,
+                "std": 129.56329110849626,
+                "median": 387.0,
                 "min": 1.0,
                 "max": 732.0,
-                "total_days": 281
+                "total_days": 238
             }
         }
     },
@@ -190,12 +190,12 @@
         },
         "R&P": {
             "loading": {
-                "0": 1,
-                "1": 1,
-                "2": 1,
-                "3": 1,
-                "4": 1,
-                "5": 1,
+                "0": 0,
+                "1": 0,
+                "2": 0,
+                "3": 0,
+                "4": 0,
+                "5": 0,
                 "6": 4,
                 "7": 4,
                 "8": 5,
@@ -249,20 +249,20 @@
             "min": 1,
             "mode": 31,
             "max": 276,
-            "mean": 30.003725983120848,
-            "std": 12.267753928094075,
+            "mean": 29.748588957055215,
+            "std": 11.830364689383181,
             "median": 33.0,
-            "count": 22276
+            "count": 16300
         },
         "R&P": {
-            "type": "triangular",
+            "type": "normal",
             "min": 1,
-            "mode": 18,
-            "max": 560,
-            "mean": 22.65267175572519,
-            "std": 9.69702101671149,
+            "mode": 22,
+            "max": 44,
+            "mean": 22.050063104753892,
+            "std": 6.441887486125607,
             "median": 22.0,
-            "count": 11004
+            "count": 9508
         }
     },
     "fte_config": {
@@ -288,10 +288,7 @@
                 "5": 32592.0,
                 "6": 26875.0,
                 "7": 32309.0,
-                "8": 27651.0,
-                "9": 28250.0,
-                "10": 30305.0,
-                "11": 29766.0
+                "8": 27651.0
             },
             "Outbound": {
                 "1": 34654.0,
@@ -301,10 +298,7 @@
                 "5": 29683.0,
                 "6": 29407.0,
                 "7": 31403.0,
-                "8": 29257.0,
-                "9": 30306.0,
-                "10": 29574.0,
-                "11": 25504.0
+                "8": 29257.0
             }
         },
         "R&P": {
@@ -316,10 +310,7 @@
                 "5": 13513.0,
                 "6": 13250.0,
                 "7": 14918.0,
-                "8": 16157.0,
-                "9": 12731.0,
-                "10": 14547.0,
-                "11": 13467.0
+                "8": 16157.0
             },
             "Outbound": {
                 "1": 9813.0,
@@ -329,10 +320,7 @@
                 "5": 15078.0,
                 "6": 12132.0,
                 "7": 13910.0,
-                "8": 14325.0,
-                "9": 11466.0,
-                "10": 14809.0,
-                "11": 14403.0
+                "8": 14325.0
             }
         }
     },
@@ -343,7 +331,7 @@
         "dock_capacity_source": "Timeslot by week W1-W48.xlsx (48 weeks)",
         "pallet_distribution_source": "Total Shipments 2025.xlsx analysis",
         "fte_source": "Hardcoded",
-        "extraction_date": "2026-01-15",
+        "extraction_date": "2026-01-19",
         "year": 2025
     }
 }
