feat: Add order flow diagrams and tracking for FG Outbound orders
- Implemented `order_flow_diagrams.py` to generate visual flow charts and timelines for FG Outbound order processes, including on-time and delayed comparisons.
- Created `order_flow_tracker.py` to simulate and track individual order lifecycles, exporting detailed logs and summaries to Excel.
- Added functionality for generating narrative descriptions and example orders for presentations.

--- a/outputs/simulation_configs/simulation_config.json
+++ b/outputs/simulation_configs/simulation_config.json
@@ -277,7 +277,7 @@
             "efficiency": 1308.83
         }
     },
-    "generated_orders_path": "d:\\TUD\\Design_Project\\outputs\\simulation_configs\\generated_orders.json",
+    "generated_orders_path": "outputs/simulation_configs/generated_orders.json",
     "kpi_monthly_totals": {
         "FG": {
             "Inbound": {
